add userlist and delete user

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/users">Customers</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/users/post">Add new</a>
+      </li>
     </ul>
   </div>
 </nav>
