--- a/src/app/users/users/users.component.html
+++ b/src/app/users/users/users.component.html
@@ -1,13 +1,19 @@
-<div class="row">
-  <div class="col-sm-2" *ngFor="let user of users$ | async">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">{{user.name}}</h5>
-        <p class="card-text">Username: {{user.username}}</p>
-        <p class="card-text">Email: {{user.email}}</p>
-        <button type="button" class="btn btn btn-secondary">Edit</button>
-        <button type="button" class="btn btn-danger">Delete</button>
-      </div>
+<div class="container-fluid">
+  <div class="col-md-4">
+    <button type="button" class="btn btn-outline-success btn-lg" routerLink="post" style="margin: 20px 0px">Add new
+      customer</button>
+  </div>
+  <div class="col-md-4">
+    <div class="list-group">
+      <a class="list-group-item list-group-item-action" *ngFor="let user of users$ | async">
+        <div class="d-flex w-100 justify-content-between">
+          <h5 class="mb-1">{{user.name}}</h5>
+          <small>Username: {{user.username}}</small>
+        </div>
+        <p>Email: {{user.email}}</p>
+        <button type="button" class="btn btn-outline-primary btn-sm" [routerLink]="['post', user.id]">Edit</button>
+        <button type="button" class="btn btn-outline-danger btn-sm" (click)="delete(user)">Delete</button>
+      </a>
     </div>
   </div>
 </div>
