--- a/src/app/users/manage-user/manage-user.component.html
+++ b/src/app/users/manage-user/manage-user.component.html
@@ -5,28 +5,24 @@
         Add new customer
       </div>
       <div class="card-body">
-        <form>
+        <form #usersForm="ngForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
             <label for="exampleInputName">User</label>
-            <input type="text" name="name" class="form-control" id="exampleInputName" aria-describedby="userHelp"
-              placeholder="Enter user" required>
-            <small id="userHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            <input type="text" name="name" class="form-control" id="exampleInputName" placeholder="Enter user" required>
           </div>
           <div class="form-group">
             <label for="exampleInputUserName">Username</label>
-            <input type="text" class="form-control" id="exampleInputUserName" aria-describedby="userNameHelp"
-              placeholder="Enter username" required>
-            <small id="userNameHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            <input type="text" name="username" class="form-control" id="exampleInputUserName" placeholder="Enter username"
+              required>
           </div>
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email"
+            <input type="email" name="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email"
               required>
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
           </div>
           <div class="row justify-content-center">
-            <button type="reset" class="btn btn-outline-secondary" routerLink="/users">Cancel</button>
-            <button type="submit" class="btn btn-outline-success">Submit</button>
+            <button type="button" class="btn btn-outline-secondary" (click)="goBack()">Cancel</button>
+            <button type="submit" class="btn btn-outline-success" [disabled]="!usersForm.valid">Submit</button>
           </div>
         </form>
       </div>
