--- a/src/app/users/manage-user/manage-user.component.html
+++ b/src/app/users/manage-user/manage-user.component.html
@@ -8,16 +8,17 @@
         <form #usersForm="ngForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
             <label for="exampleInputName">User</label>
-            <input type="text" name="name" class="form-control" id="exampleInputName" placeholder="Enter user" required>
+            <input type="text" name="name" [(ngModel)]="user.name" class="form-control" id="exampleInputName"
+              placeholder="Enter user">
           </div>
           <div class="form-group">
             <label for="exampleInputUserName">Username</label>
-            <input type="text" name="username" class="form-control" id="exampleInputUserName" placeholder="Enter username"
+            <input type="text" name="username" [(ngModel)]="user.username" class="form-control" id="exampleInputUserName" placeholder="Enter username"
               required>
           </div>
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
-            <input type="email" name="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email"
+            <input type="email" name="email" [(ngModel)]="user.email" class="form-control" id="exampleInputEmail1" placeholder="Enter email"
               required>
           </div>
           <div class="row justify-content-center">
