--- a/src/app/users/components/add-edit-user/add-edit-user.component.html
+++ b/src/app/users/components/add-edit-user/add-edit-user.component.html
@@ -1,3 +1,26 @@
-<p>
-  add-edit-user works!
-</p>
+<div class="row justify-content-center">
+  <div class="col-8">
+    <form>
+      <div class="form-group">
+        <label for="exampleInputName">Name</label>
+        <input type="email" class="form-control" id="exampleInputName" placeholder="Enter name">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputLogin">Login</label>
+        <input type="email" class="form-control" id="exampleInputLogin" placeholder="Enter login">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputEmail">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail" placeholder="Enter email">
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-2">
+          <button type="reset" class="btn btn-outline-secondary">Cancel</button>
+        </div>
+        <div class="col-2">
+          <button type="submit" class="btn btn-outline-success">Submit</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
