--- a/src/app/users/components/add-edit-user/add-edit-user.component.html
+++ b/src/app/users/components/add-edit-user/add-edit-user.component.html
@@ -1,24 +1,24 @@
 <div class="row justify-content-center">
   <div class="col-8">
-    <form>
+    <form #usersForm="ngForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="exampleInputName">Name</label>
-        <input type="email" class="form-control" id="exampleInputName" placeholder="Enter name">
+        <input type="text" name="name" [(ngModel)]="user.name" class="form-control" id="exampleInputName" placeholder="Enter name" required>
       </div>
       <div class="form-group">
         <label for="exampleInputLogin">Login</label>
-        <input type="email" class="form-control" id="exampleInputLogin" placeholder="Enter login">
+        <input type="text" name="username" [(ngModel)]="user.username" class="form-control" id="exampleInputLogin" placeholder="Enter login" required>
       </div>
       <div class="form-group">
         <label for="exampleInputEmail">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail" placeholder="Enter email">
+        <input type="email" name="email" [(ngModel)]="user.email" class="form-control" id="exampleInputEmail" placeholder="Enter email" required>
       </div>
       <div class="row justify-content-center">
         <div class="col-2">
           <button type="reset" class="btn btn-outline-secondary">Cancel</button>
         </div>
         <div class="col-2">
-          <button type="submit" class="btn btn-outline-success">Submit</button>
+          <button type="submit" class="btn btn-outline-success" [disabled]="!usersForm.valid">Submit</button>
         </div>
       </div>
     </form>
