--- a/src/app/users/components/user-list/user-list.component.html
+++ b/src/app/users/components/user-list/user-list.component.html
@@ -11,8 +11,8 @@
         </ul>
         <div class="d-flex justify-content-between align-items-center">
           <div class="btn-group">
-            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-            <button type="button" class="btn btn-sm btn-outline-danger">Delete</button>
+            <button type="button" class="btn btn-sm btn-outline-secondary" [routerLink]="['edit', user.id]">Edit</button>
+            <button type="button" class="btn btn-sm btn-outline-danger" (click)="delete(user)">Delete</button>
           </div>
         </div>
       </div>
