--- a/src/app/users/components/user-list/user-list.component.html
+++ b/src/app/users/components/user-list/user-list.component.html
@@ -12,7 +12,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <div class="btn-group">
             <button type="button" class="btn btn-sm btn-outline-secondary" [routerLink]="['edit', user.id]">Edit</button>
-            <button type="button" class="btn btn-sm btn-outline-danger" (click)="delete(user)">Delete</button>
+            <button type="button" class="btn btn-sm btn-outline-danger" (click)="delete(user.id)">Delete</button>
           </div>
         </div>
       </div>
