--- a/src/app/users/components/add-edit-user/add-edit-user.component.html
+++ b/src/app/users/components/add-edit-user/add-edit-user.component.html
@@ -3,19 +3,22 @@
     <form #usersForm="ngForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="exampleInputName">Name</label>
-        <input type="text" name="name" [(ngModel)]="user.name" class="form-control" id="exampleInputName" placeholder="Enter name" required>
+        <input type="text" name="name" [(ngModel)]="user.name" class="form-control" id="exampleInputName" placeholder="Enter name"
+          required>
       </div>
       <div class="form-group">
         <label for="exampleInputLogin">Login</label>
-        <input type="text" name="username" [(ngModel)]="user.username" class="form-control" id="exampleInputLogin" placeholder="Enter login" required>
+        <input type="text" name="username" [(ngModel)]="user.username" class="form-control" id="exampleInputLogin"
+          placeholder="Enter login" required>
       </div>
       <div class="form-group">
         <label for="exampleInputEmail">Email address</label>
-        <input type="email" name="email" [(ngModel)]="user.email" class="form-control" id="exampleInputEmail" placeholder="Enter email" required>
+        <input type="email" name="email" [(ngModel)]="user.email" class="form-control" id="exampleInputEmail"
+          placeholder="Enter email" required>
       </div>
       <div class="row justify-content-center">
         <div class="col-2">
-          <button type="reset" class="btn btn-outline-secondary">Cancel</button>
+          <button type="button" class="btn btn-outline-secondary" routerLink="/users">Cancel</button>
         </div>
         <div class="col-2">
           <button type="submit" class="btn btn-outline-success" [disabled]="!usersForm.valid">Submit</button>
